--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_paciente2.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_paciente2.html
@@ -1,83 +1,85 @@
 {%extends 'panel_control/base.html'%}
 
 {% block content %}
-<div class="card">
-	<div class="card-body">
-		<center>  <h2>	 <i class="bi-person-lines-fill">Listado de Pacientes</i></h2> </center>    
+	<div class="container">
+		<div class="card">
+			<div class="card-body">
+				<center>  <h2>	 <i class="bi-person-lines-fill">Listado de Pacientes</i></h2> </center>    
 
 
-<table  align="right" >
-    <tr>
-    <td> 
-		<a href="/administrativo/agregar_paciente/" class="btn btn-success">
-			<i class="bi-person-plus-fill"></i>
-			Agregar un paciente
-		</a> 
-	</td>
-    </tr>
-</table>
-<br>
-<br>
-<br>
-
-<table class="table table-striped table-hover">
-	<thead style="border: 1cm;">
-		<tr>
-			<th>Número</th>
-			<th>N° de Documento</th>
-			<th>Nombre y apellido</th>
-			<th>Acciones</th>
-		</tr>
-		
-	</thead>
-	<tbody>
-		{% if object_list %}
-		{% for paciente in object_list %}
-		<tr>
-			<td >{{forloop.counter}}</td>
-			<td>{{ paciente.numero_documento }}</td>
-			<td>{{ paciente.numero_documento.nombre }} {{paciente.numero_documento.apellido}}</td>
-			<td>
-				<!-- <a class="btn btn-primary" href="/administrativo/asignar_tratamiento/{{ paciente.id_paciente }}">
-					<i class="bi-pencil-square"></i>
-					Asignar Tratamiento
-				</a> -->
-				<a class="btn btn-primary" href="/administrativo/modificar_tratamiento_asignado/{{ paciente.id_paciente }}">
-					<i class="bi-pencil-square"></i>
-					Asignar Tratamientos
-				</a>
-				<a class="btn btn-info" href="/tratamiento/listar_tratamientos_asignados/{{paciente.numero_documento}}">
-					<i class="bi-eye-fill"></i>
-					Tratamientos asignados
-				</a>
+		<table  align="right" >
+			<tr>
+			<td> 
+				<a href="/administrativo/agregar_paciente/" class="btn btn-success">
+					<i class="bi-person-plus-fill"></i>
+					Agregar un paciente
+				</a> 
 			</td>
-		</tr>
-		{% endfor %}
-		
-		{% else %}
-		<h1>No hay registros de pacientes</h1>
-		{% endif %}
+			</tr>
+		</table>
+		<br>
+		<br>
+		<br>
 
-		{% if messages %}
-                        <ul class="messages">
-                          
-                            {% for message in messages %}
-                            <li>
-                                {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Error:
-                                {% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
-                                <B><FONT COLOR="BLUE">¡La operación fue exitosa!: </FONT>
-                                
-                                {% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}Advertencia:
-                                {% elif message.level == DEFAULT_MESSAGE_LEVELS.INFO %}Aviso: {% endif %}
-                                {{ message }}
-                            </li>
-                            {% endfor %}
-                        </ul>
-                        {% endif %}
-	</tbody>
-</table> 
+		<table class="table table-striped table-hover">
+			<thead style="border: 1cm;">
+				<tr>
+					<th>Número</th>
+					<th>N° de Documento</th>
+					<th>Nombre y apellido</th>
+					<th>Acciones</th>
+				</tr>
+				
+			</thead>
+			<tbody>
+				{% if object_list %}
+				{% for paciente in object_list %}
+				<tr>
+					<td >{{forloop.counter}}</td>
+					<td>{{ paciente.numero_documento }}</td>
+					<td>{{ paciente.numero_documento.nombre }} {{paciente.numero_documento.apellido}}</td>
+					<td>
+						<!-- <a class="btn btn-primary" href="/administrativo/asignar_tratamiento/{{ paciente.id_paciente }}">
+							<i class="bi-pencil-square"></i>
+							Asignar Tratamiento
+						</a> -->
+						<a class="btn btn-primary" href="/administrativo/modificar_tratamiento_asignado/{{ paciente.id_paciente }}">
+							<i class="bi-pencil-square"></i>
+							Asignar Tratamientos
+						</a>
+						<a class="btn btn-info" href="/tratamiento/listar_tratamientos_asignados/{{paciente.numero_documento}}">
+							<i class="bi-eye-fill"></i>
+							Tratamientos asignados
+						</a>
+					</td>
+				</tr>
+				{% endfor %}
+				
+				{% else %}
+				<h1>No hay registros de pacientes</h1>
+				{% endif %}
 
+				{% if messages %}
+								<ul class="messages">
+								
+									{% for message in messages %}
+									<li>
+										{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Error:
+										{% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+										<B><FONT COLOR="BLUE">¡La operación fue exitosa!: </FONT>
+										
+										{% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}Advertencia:
+										{% elif message.level == DEFAULT_MESSAGE_LEVELS.INFO %}Aviso: {% endif %}
+										{{ message }}
+									</li>
+									{% endfor %}
+								</ul>
+								{% endif %}
+			</tbody>
+		</table> 
+
+			</div>
+		</div>
 	</div>
-</div>
 
 {% endblock%}
