Implementacion de Tratamientos Asignados a pacientes
Implementacion

--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_tratamiento_asignado.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_tratamiento_asignado.html
@@ -34,6 +34,11 @@
                             <i class="bi-save"></i>
                             Guardar
                         </button>
+                        <!-- &nbsp; -->
+                        <a href="/tratamiento/listar_paciente2/" class="btn btn-secondary" style="margin: 10px;">
+                            <i class="bi-x-circle"></i>
+                            Cancelar
+                        </a>
                         <!-- <a href="/roles/listar_roles/ " class="btn btn-danger" style="margin: 10px;">
                             <i class="bi-x-circle"></i>
                             Cancelar
