--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_asignados.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_asignados.html
@@ -20,6 +20,11 @@
                 <center> 
                     <h2 <i class="bi bi-clipboard2-pulse"> Tratamientos asignados</i> </h2>
                 </center>
+                    <center>
+                        <h4>
+                            <b>Paciente:</b> <i>{{persona.nombre}} {{persona.apellido}}</i>
+                        </h4>
+                    </center>
 
                 <!--Inicio de la TABLA DE TRATAMIENTOS-->
                 <table>
@@ -31,6 +36,8 @@
                                 {%if tratamientos_asignados%}
                                     <th>Nro Tratamiento</th>
                                     <th>Nombre </th>
+                                    <th>Precio </th>
+                                    <th>Acciones</th>
                                 {%endif%}
                             </tr>
                         </thead>
@@ -40,26 +47,36 @@
                                 {%for tratamiento in tratamientos_asignados%}
                                 <tr>
                                     <td >{{forloop.counter}}</td>
-                                    <td >{{tratamiento}}</td>
+                                    <td >{{tratamiento.nombre_tratamiento}}</td>
+                                    <td >{{tratamiento.precio}}</td>
                                     <!--OPCIONES Modificar y Eliminar-->
-                                        {%comment%}
-                                        {%if perms.gestion_tratamiento.change_tratamiento%} 
-                                                <td><a href="/tratamiento/modificar_tratamiento/{{c.nombre_tratamiento}}" class="btn btn-primary">
-                                                        <i class="bi-pencil-square"></i>
-                                                    Modificar</a>
+                                    {%comment%}
+                                    {%if perms.gestion_tratamiento.change_tratamiento%} 
+                                        <td>
+                                            <a href="/tratamiento/modificar_tratamiento/{{c.nombre_tratamiento}}" class="btn btn-primary">
+                                                <i class="bi-pencil-square"></i>
+                                                Modificar
+                                            </a>
+                                        </td>
+                                    {%endif%}
+                                    {%endcomment%}
+                                    <!-- Eliminar-->
+                                    {%if perms.gestion_tratamiento.delete_tratamiento%}
+                                        <td>
+                                            <a href="/tratamiento/eliminar_tratamiento_asignado/{{id_paciente_tratamiento}}/{{persona.numero_documento}}" class="btn btn-danger btnEliminacion">
+                                                <i class="bi-trash" ></i> 
+                                                Eliminar
+                                            </a>
+                                        </td>
                                         {%endif%}
-                                        <!-- Eliminar-->      
-                                
-                                        {%if perms.gestion_tratamiento.delete_tratamiento%}          
-                                                    <a href="/tratamiento/eliminar_tratamiento/{{c.nombre_tratamiento}}" class="btn btn-danger btnEliminacion">
-                                                        <i class="bi-trash-fill" ></i> 
-                                                        Eliminar</a> 
-                                                </td>
-                                        {%endif%}
-                                        {%endcomment%}
-                                            
                                 </tr>
                                 {% endfor %}
+                                <tr>
+                                    <th>Precio Total</th>
+                                    <th></th>
+                                    <th>{{precio_total}} Gs</th>
+                                    <th></th>
+                                </tr>
                                 {%else%}
                                     <br>
                                     <br>
@@ -92,6 +109,24 @@
                                 {% endif %}
                         </tbody>
                     </table>
+                    <div class="d-flex justify-content-center">
+                        {%if tratamientos_asignados%}
+                        <a type="submit" href="/administrativo/modificar_tratamiento_asignado/{{id_paciente}}" class="btn btn-primary btn-block txt-white">
+                            <i class="bi bi-plus-circle"></i>
+                            Agregar
+                        </a>
+                        &nbsp;
+                        <a type="submit" href="#" class="btn btn-success btn-block txt-white">
+                            <i class="bi bi-check2-square"></i>
+                            Confirmar todos
+                        </a>
+                        {%endif%}
+                        &nbsp;
+                        <a href="/tratamiento/listar_paciente2/" class="btn btn-secondary"  >
+                            <i class="bi-x-circle"></i> 
+                            Atras
+                        </a>
+                    </div>
                 </table>
             <!--end TABLA-->
         
@@ -101,6 +136,7 @@
 {%endif%}
 
 {%endblock%}
+
 <!--este funciona NO BORRAR-->
 {% comment %} <script>
     function cancelar() {
