--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/calendar.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/calendar.html
@@ -82,10 +82,37 @@
                 <div class="card-body">
                         <center> 
                             
-                            <h2 <i class="bi bi-calendar"></i> Calendario</i> </h2>
+                            <h2 <i class="bi bi-calendar"></i> Agendamiento | Citas</i> </h2>
                         </center>
                     
-                    
+                    <table  align="right" >
+                            <tr>
+                            <td>
+                                {%if perms.gestion_agendamiento.add_cita%}
+                                <a href="/agendamiento/agregar_cita/" class="btn btn-success">
+                                    <i class="bi-person-plus-fill"></i>
+                                    Agregar una cita
+                                </a>
+                                {%endif%}
+                            </td>
+                            <td>
+                                        {% comment %} {%if perms.gestion_agendamiento.change_cita%}
+                                        <a href="/agendamiento/modificar_cita/{{paciente.numero_documento}} " class="btn btn-info">
+                                        <i class="bi-pencil-square"></i>
+                                            Editar cita
+                                        </a>
+                                        {%endif%} {% endcomment %}
+                                    </td>
+                                    <td>
+                                        {% comment %} {%if perms..gestion_agendamiento.delete_cita%}
+                                    <a class="btn btn-danger" href="/administrativo/eliminar_cita/{{paciente.id_cita}}">
+                                        <i class="bi-trash-fill" ></i>
+                                        Eliminar
+                                    </a>
+                                    {%endif%} {% endcomment %}
+                                </td>
+                            </tr>
+                    </table>
                 </div>
 
                   <!--Calendario-->
