Implementación de Cobro al contado
Aun no se encuentra funcionando al 100 por ciento, ya registra los cobros al contado pero lo hace de forma duplicada, y ya funciona listar cobro al contado

--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
@@ -337,6 +337,9 @@
                                                   <li><a class="dropdown-item" href="#"> 
                                                     <font color="black">  • Servicios brindados a <br>Cuota | Contado</font></a>
                                                   </li>
+                                                  <li><a class="dropdown-item" href="/cobros/listar_cobros/"> 
+                                                    <font color="black">  • Cobros registrados</font></a>
+                                                  </li>
 
                                                 </ul>
                                             </li>
