--- a/Proyecto2/SmileSoft/gestion_cobros/templates/cobrar_tratamiento.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/cobrar_tratamiento.html
@@ -1,24 +1,21 @@
 {%extends 'panel_control/base.html'%}  
-{% comment %} <!--Gestion de Tratamientos-->
-<link rel="stylesheet" href= "{% static 'estilo.css'%}"> {% endcomment %}
 
 {%load static%}
 
-
 {% block javascripts%}
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-     
-
 {%endblock%}
 
 {%block content%}
 
-{%if perms.gestion_tratamiento.view_tratamiento%}  
+<!-- {%if perms.gestion_tratamiento.view_tratamiento%} -->
     <div class="container">
         <div class="card">
             <div class="card-body">
                 <center> 
-                    <h2 <i class="bi bi-clipboard2-pulse"> Tratamientos asignados</i> </h2>
+                    <h2>
+                        <i class="bi bi-cash-coin">Tratamientos a cobrar</i> 
+                    </h2>
                 </center>
                     <center>
                         <h4>
@@ -37,7 +34,6 @@
                                     <th>Nro Tratamiento</th>
                                     <th>Nombre </th>
                                     <th>Precio </th>
-                                    <th>Acciones</th>
                                 {%endif%}
                             </tr>
                         </thead>
@@ -49,15 +45,6 @@
                                     <td >{{forloop.counter}}</td>
                                     <td >{{tratamiento.nombre_tratamiento}}</td>
                                     <td >{{tratamiento.precio}}</td>
-                                    <!-- Eliminar-->
-                                    {%if perms.gestion_tratamiento.delete_tratamiento%}
-                                        <td>
-                                            <a href="/tratamiento/eliminar_tratamiento_asignado/{{id_paciente_tratamiento}}/{{persona.numero_documento}}" class="btn btn-danger btnEliminacion">
-                                                <i class="bi-trash" ></i> 
-                                                Eliminar
-                                            </a>
-                                        </td>
-                                        {%endif%}
                                 </tr>
                                 {% endfor %}
                                 <tr>
@@ -100,20 +87,15 @@
                     </table>
                     <div class="d-flex justify-content-center">
                         {%if tratamientos_asignados%}
-                        <a type="submit" href="/administrativo/modificar_tratamiento_asignado/{{id_paciente}}" class="btn btn-primary btn-block txt-white">
-                            <i class="bi bi-plus-circle"></i>
-                            Agregar
-                        </a>
-                        &nbsp;
-                        <a type="submit" href="/cobros/cobrar_tratamiento/{{persona.numero_documento}}" class="btn btn-success btn-block txt-white">
+                        <a type="submit" href="/cobros/registrar_cobro/{{persona.numero_documento}}/" class="btn btn-success btn-block txt-white">
                             <i class="bi bi-check2-square"></i>
-                            Confirmar todos
+                            Cobrar
                         </a>
                         {%endif%}
                         &nbsp;
-                        <a href="/tratamiento/listar_paciente2/" class="btn btn-secondary"  >
+                        <a href="/tratamiento/listar_tratamientos_asignados/{{persona.numero_documento}}" class="btn btn-danger"  >
                             <i class="bi-x-circle"></i> 
-                            Atras
+                            Cancelar
                         </a>
                     </div>
                 </table>
@@ -122,7 +104,7 @@
             </div>
         </div>
     </div>
-{%endif%}
+<!-- {%endif%} -->
 
 {%endblock%}
 
