--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
@@ -81,7 +81,7 @@
 
                                         <tr>
                                             <td >{{forloop.counter}}</td>
-                                            <td >{{c.nombre_paciente}}</td>
+                                            <td >{{c.paciente.nombre}} {{c.paciente.apellido}}</td>
                                             <td >{{c.paciente }}</td>
                                             <td >{{c.fecha}}</td>
                                             <td >{{c.hora}}</td>
