--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/modificar_insumos.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/modificar_insumos.html
@@ -21,7 +21,40 @@
                     </div>
                     {%endif%}
 
-                        {{form.as_p}}
+                        <!-- {{form.as_p}} -->
+                        <table>
+                            <br>
+                            <div class="form-group">
+                                <p>
+                                <label for="{{form.nombre_insumo.name}}">{{form.nombre_insumo.label}}</label></p>
+                                {{form.nombre_insumo}}</p>
+                            </div>
+                            <br>
+                            <div class="form-group">
+                                <p>
+                                <label for="{{form.descripcion_insumo.name}}">{{form.descripcion_insumo.label}}</label></p>
+                                {{form.descripcion_insumo}}</p>
+                            </div>
+                            <br>
+                            <div class="form-group">
+                            <p>
+                                <label for="{{form.precio.name}}">{{form.precio.label}}</label></p>
+                                {{form.precio}} </p>
+                            </div>
+                            <br>
+                            <p>
+                            <div class="form-group">
+                                <label for="{{form.fecha_caducidad.name}}">{{form.fecha_caducidad.label}}</label>
+                                {{form.fecha_caducidad}}
+                            </div></p>
+                            <br>
+                            <div class="form-group">
+                                <p>
+                                    <label for="{{form.cantidad_insumo.name}}">{{form.cantidad_insumo.label}}</label></p>
+                                    {{form.cantidad_insumo}} </p>
+                                </div>
+                            <br>
+                            </Table>
                    
 
                         <br>
