--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos.html
@@ -61,6 +61,7 @@
                                     <th>Nombre </th>
                                     <th>Precio</th>  
                                     <th>Fecha de Caducidad</th> 
+                                    <th>Cantidad Insumo</th> 
                                     <!-- <th>Estado</th>  -->
                                     {% comment %} <th colspan="2">Acciones </th> {% endcomment %}
                             </tr>
@@ -73,6 +74,7 @@
                                     <td >{{c.nombre_insumo}}</td>
                                     <td>{{c.precio}}</td> 
                                     <td>{{c.fecha_caducidad}}</td> 
+                                    <td>{{c.cantidad_insumo}}</td> 
                                     <!-- <td>{{c.estado}}</td>  -->
                                     {{busqueda}}
                                     <!--OPCIONES Modificar y Eliminar-->
