--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
@@ -23,18 +23,18 @@
             <div class="card-body">
                     <center> 
                         
-                        <h2 <i class="bi bi-archive"> Citas reservadas</i> </h2>
+                        <h2 <i class="bi bi-archive"> Citas </i> </h2>
                     </center>
               
                 <table  align="right" >
                         <tr>
                         <td>
-                             {%if perms.gestion_agendamiento.add_cita%}
-                                <a href="/agendamiento/agregar_cita/" class="btn btn-success">
+                             {% comment %} {%if perms.gestion_agendamiento.add_cita%}
+                                <a href="/agendamiento/agregar_cita/{{ paciente.id_paciente }}" class="btn btn-success">
                                     <i class="bi-person-plus-fill"></i>
                                     Agregar una cita
                                 </a>
-                                {%endif%}
+                                {%endif%} {% endcomment %}
                         </td>
                         </tr>
                 </table>
@@ -81,7 +81,7 @@
 
                                         <tr>
                                             <td >{{forloop.counter}}</td>
-                                            <td >{{c.nombre_paciente}} {{c.apellido_paciente}}</td>
+                                            <td >{{c.nombre_paciente}}</td>
                                             <td >{{c.paciente }}</td>
                                             <td >{{c.fecha}}</td>
                                             <td >{{c.hora}}</td>
