--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
@@ -29,22 +29,25 @@
                 <table  align="right" >
                         <tr>
                         <td>
-                             {% comment %} {%if perms.gestion_agendamiento.add_cita%}
-                                <a href="/agendamiento/agregar_cita/{{ paciente.id_paciente }}" class="btn btn-success">
-                                    <i class="bi-person-plus-fill"></i>
-                                    Agregar una cita
+                           
+                            {%if perms.gestion_agendamiento.view_cita%}
+                                <a href="/agendamiento/calendar" class="btn btn-info">
+                                    <i class="bi bi-calendar"></i>
+                                   Ver Calendario <br>
                                 </a>
-                                {%endif%} {% endcomment %}
+                                {%endif%}
                         </td>
                         </tr>
                 </table>
             
-
+<br> <br>
+<br> 
                         <!--Barra de Busqueda-->
                         <form  class="form-inline" method="POST">
                             {% csrf_token %}
                             <div class="input-group">
                                 <input type="search" name="q"  class="form-control bg-light border-0 small" placeholder="Buscar nombre del paciente" aria-label="search" value="{{request.POST.buscar}}" >
+                                <br>
                                 <div class="input-group-append">
                                     <button  class="btn btn-outline-primary my-2 my-sm-0" type="submit">
                                         <!--ICONO LUPA-->
