--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
@@ -242,7 +242,7 @@
                                                         Asignación de Tratamientos a Pacientes 
                                                       </strong>
                                                       <li><a class="dropdown-item" href="/tratamiento/listar_paciente2">• Seleccionar Paciente</li></a> 
-                                                    {%endif%}
+                                                  {%endif%}
                                                 </ul>
                                               </li>
                                               {% endif %}
@@ -276,7 +276,7 @@
                                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                                   <!--Opcion 7.1 -->
                                                 
-                                                  {%if perms.gestion_administrativo.change_paciente%}
+                                                  <!-- {%if perms.gestion_administrativo.change_paciente%}
                                                     <strong class="dropdown-header" style="color:blue; font-size:16px;" >
                                                               Antecedente Clínico
                                                   </strong>
@@ -284,7 +284,7 @@
                                                     <font color="black"> • Clínico Personal - Familiar</font></a>
                                                   </li>
                                                   <li><hr class="dropdown-divider"></li>
-                                                  {%endif%}
+                                                  {%endif%} -->
                                                   <!--Opcion 7.2 -->
                                                   {% comment %} <li><a class="dropdown-item" href="#">• Clínico Familiar</a></li> {% endcomment %}
                                                   
