Agregué el boton agregar insumos

--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos.html
@@ -59,7 +59,7 @@
                             <tr>
                                     <th>Nro Insumo</th>
                                     <th>Nombre </th>
-                                    <th>Precio</th>  
+                                    <th>Costo</th>  
                                     <th>Fecha de Caducidad</th> 
                                     <th>Cantidad Insumo</th> 
                                     <!-- <th>Estado</th>  -->
