--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
@@ -243,6 +243,9 @@
                                                       </strong>
                                                       <li><a class="dropdown-item" href="/tratamiento/listar_paciente2">• Seleccionar Paciente</li></a> 
                                                   {%endif%}
+                                                  <strong class="dropdown-header" style="color:blue; font-size:16px;" >
+                                                    Tratamientos pendientes
+                                                  </strong>
                                                 </ul>
                                               </li>
                                               {% endif %}
