--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/agregar_tratamiento.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/agregar_tratamiento.html
@@ -18,18 +18,14 @@
                                             ✅ Tratamiento agregado correctamente
                                         </div>
                                     {%endif%}
-                                            {{form.as_p}} 
-                                                <!-- <table>
-                                                    <div class="form-group">
-                                                        <p>
-                                                        <label for="{{form.descripcion_tratamiento.name}}">{{form.descripcion_tratamiento.label}}</label></p>
-                                                        {{form.descripcion_tratamiento}}
-                                                    </div>
-                                                
-                                                    </Table> -->
-                                </div> 
-                                <!-- <div style="margin: 20px;" ></div> -->
-                                
+                                    {{form.as_p}} 
+                                    <br>
+                                    <div>
+                                        <a class="btn btn-outline-secondary" type="button" href="#" >
+
+                                            Agregar insumos
+                                        </a>
+                                    </div>
                                 <div class="d-flex justify-content-center">
                                     <button class="btn btn-primary" type="submit" style="margin: 10px;">Guardar</button>
                                     <a href="/tratamiento/listar_tratamiento/" class="btn btn-danger" style="margin: 10px;">Cancelar</a>
