--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos.html
@@ -57,10 +57,10 @@
                     <table class="table table-striped table-hover">
                         <thead> 
                             <tr>
-                                    <th>Nro Tratamiento</th>
-                                    <th>Nombre </th>
+                                <th>Nro Tratamiento</th>
+                                <th>Nombre </th>
                                 <th>Precio</th>  
-                                    {% comment %} <th colspan="2">Acciones </th> {% endcomment %}
+                                <th colspan="2">Acciones </th>
                             </tr>
                         </thead>
 
@@ -72,20 +72,29 @@
                                     <td>{{c.precio}}</td> 
                                     {{busqueda}}
                                     <!--OPCIONES Modificar y Eliminar-->
-                                        {%if perms.gestion_tratamiento.change_tratamiento%} 
-                                                <td><a href="/tratamiento/modificar_tratamiento/{{c.nombre_tratamiento}}" class="btn btn-primary">
-                                                        <i class="bi-pencil-square"></i>
-                                                    Modificar</a>
-                                        {%endif%}
+                                    <td>
+                                        {%if perms.gestion_tratamiento.change_tratamiento%}
+                                        <a href="#" class="btn btn-success">
+                                            <i class="bi-pencil-square"></i>
+                                            Agregar insumos
+                                        </a>
+                                    </td>
+                                    <td>
+                                        <a href="/tratamiento/modificar_tratamiento/{{c.nombre_tratamiento}}" class="btn btn-primary">
+                                            <i class="bi-pencil-square"></i>
+                                            Modificar
+                                        </a>
+                                    {%endif%}
+                                    </td>
                                 <!-- Eliminar-->      
-                                
-                                        {%if perms.gestion_tratamiento.delete_tratamiento%}          
-                                                    <a href="/tratamiento/eliminar_tratamiento/{{c.nombre_tratamiento}}" class="btn btn-danger btnEliminacion">
-                                                        <i class="bi-trash-fill" ></i> 
-                                                        Eliminar</a> 
-                                                </td>
+                                    {%if perms.gestion_tratamiento.delete_tratamiento%}
+                                    <td>
+                                        <a href="/tratamiento/eliminar_tratamiento/{{c.nombre_tratamiento}}" class="btn btn-danger btnEliminacion">
+                                            <i class="bi-trash-fill" ></i> 
+                                                Eliminar
+                                            </a> 
+                                    </td>
                                         {%endif%}
-                                            
                                 </tr>
                                 {% endfor %}
                             
