--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/agregar_insumo.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/agregar_insumo.html
@@ -51,6 +51,12 @@
                                                             {{form.cantidad_insumo}} </p>
                                                         </div>
                                                     <br>
+                                                    <div class="form-group">
+                                                        <p>
+                                                            <label for="{{form.unidad.name}}">{{form.unidad.label}}</label></p>
+                                                            {{form.unidad}} </p>
+                                                        </div>
+                                                    <br>
                                                     </Table>
 
                                 </div> 
