--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/modificar_insumos.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/modificar_insumos.html
@@ -54,6 +54,12 @@
                                     {{form.cantidad_insumo}} </p>
                                 </div>
                             <br>
+                            <div class="form-group">
+                                <p>
+                                    <label for="{{form.unidad.name}}">{{form.unidad.label}}</label></p>
+                                    {{form.unidad}} </p>
+                                </div>
+                            <br>
                             </Table>
                    
 
